--- a/Student Grade Management System/Student Grade Management System.vcxproj
+++ b/Student Grade Management System/Student Grade Management System.vcxproj
@@ -115,6 +115,20 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="base.h" />
+    <ClInclude Include="course.h" />
+    <ClInclude Include="grade.h" />
+    <ClInclude Include="student.h" />
+    <ClInclude Include="template.h" />
+    <ClInclude Include="window.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="base.cpp" />
+    <ClCompile Include="course.cpp" />
+    <ClCompile Include="grade.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="student.cpp" />
+    <ClCompile Include="window.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
