--- a/Student Grade Management System/Student Grade Management System.vcxproj
+++ b/Student Grade Management System/Student Grade Management System.vcxproj
@@ -118,6 +118,7 @@
     <ClInclude Include="base.h" />
     <ClInclude Include="course.h" />
     <ClInclude Include="grade.h" />
+    <ClInclude Include="performance.h" />
     <ClInclude Include="student.h" />
     <ClInclude Include="template.h" />
     <ClInclude Include="window.h" />
@@ -127,6 +128,7 @@
     <ClCompile Include="course.cpp" />
     <ClCompile Include="grade.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="performance.cpp" />
     <ClCompile Include="student.cpp" />
     <ClCompile Include="window.cpp" />
   </ItemGroup>
