--- a/Student Grade Management System/Student Grade Management System.vcxproj.filters
+++ b/Student Grade Management System/Student Grade Management System.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="template.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="performance.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="base.cpp">
@@ -51,6 +54,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="main.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="performance.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
