added a few menu function

--- a/Student Grade Management System/Student Grade Management System.vcxproj.filters
+++ b/Student Grade Management System/Student Grade Management System.vcxproj.filters
@@ -60,4 +60,15 @@
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="course.txt">
+      <Filter>资源文件</Filter>
+    </Text>
+    <Text Include="performance.txt">
+      <Filter>资源文件</Filter>
+    </Text>
+    <Text Include="student.txt">
+      <Filter>资源文件</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
