--- a/Student Grade Management System/Student Grade Management System.vcxproj
+++ b/Student Grade Management System/Student Grade Management System.vcxproj
@@ -132,6 +132,11 @@
     <ClCompile Include="student.cpp" />
     <ClCompile Include="window.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="course.txt" />
+    <Text Include="performance.txt" />
+    <Text Include="student.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
