--- a/Student Grade Management System/Student Grade Management System.vcxproj.filters
+++ b/Student Grade Management System/Student Grade Management System.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="performance.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="tree.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="base.cpp">
@@ -57,6 +60,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="performance.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="tree.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
